--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,14 +2,14 @@ name: ${pom.artifactId}
 version: ${pom.version}
 description: Keeps track of players' playtime.
 
-main: net.omniscimus.bukkit.democracy.Main
+main: net.omniscimus.bukkit.proposalvoting.Main
 database: false
 
 commands:
    democracy:
       aliases: [dc]
       description: The main command for the ${pom.parent.artifactId} plugin.
-      permission: democracy.user
+      permission: proposalvoting.user
 permissions:
    democracy.user:
       default: true
