--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>net.omniscimus.democracy</groupId>
-  <artifactId>Democracy</artifactId>
+  <groupId>net.omniscimus.bukkit.proposalvoting</groupId>
+  <artifactId>ProposalVoting</artifactId>
   <version>1.0.0</version>
   <packaging>jar</packaging>
   <dependencies>
